js/js.translator/testData/incremental/invalidation/addMethodToInterfaceWithConsumer/lib1/l1.1.kt
package sample

interface I {
    fun foo(): Int
    fun baz(): Int
}
